--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/DeleteLeave.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/DeleteLeave.cshtml
@@ -1,35 +1,49 @@
 ﻿@model Emp_Intranet_UI.Models.DisplayModels.HomeDisplayModel
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>LeaveModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayFor(model => model.MyLeaves.Leave_Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MyLeaves.Leave_Reason)
-        </dd>
+<div id="createModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeCreateModal()">&times;</span>
+        <div>
+            <h2>Cancel Your Leave</h2>
+            <h4>Are you sure you want to cancel the below Leave?</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    Employee: @Html.DisplayFor(model => model.Profile.profile_title) @Html.DisplayFor(model => model.Profile.profile_name)
+                    @Html.DisplayFor(model => model.Profile.profile_surname)
+                </dt>
+                <dt>
+                    Manager: @Html.DisplayFor(model => model.MyManager.profile_title) @Html.DisplayFor(model => model.MyManager.profile_name)
+                    @Html.DisplayFor(model => model.MyManager.profile_surname)
+                </dt>
+                <dt>
+                    Leave: @Html.DisplayFor(model => model.MyLeaves.Leave_Name)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MyLeaves.Leave_StartDate)
-        </dt>
+                <dt>
+                    Reason: @Html.DisplayFor(model => model.MyLeaves.Leave_Reason)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MyLeaves.Leave_EndDate)
-        </dd>
+                <dt>
+                    Start Date: @Html.DisplayFor(model => model.MyLeaves.Leave_StartDate)
+                </dt>
 
-    </dl>
+                <dt>
+                    End Date:@Html.DisplayFor(model => model.MyLeaves.Leave_EndDate)
+                </dt>
 
-    @using (Html.BeginForm("ConfirmDeleteLeave", "Home", new { id = Model.MyLeaves.Id }, FormMethod.Post))
-    {
-        @Html.AntiForgeryToken()
-   
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            </dl>
+
+            @using (Html.BeginForm("ConfirmDeleteLeave", "Home", new { id = Model.MyLeaves.Id }, FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color">
+                    <input type="submit" value="Cancel" class="btn btn-default" /> |
+                    @Html.ActionLink("Back", "Index")
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
