--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/_NewLeave.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/_NewLeave.cshtml
@@ -6,12 +6,13 @@
     <div id="createModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeCreateModal()">&times;</span>
-            <h2>Update User</h2>
-
+            <h2>Apply For Leave</h2>
+            <h4>Please fill in the below information to apply for your leave</h4>
+            <br />
             @using (Html.BeginForm("_NewLeave", "Home", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
-               
+
                 <!-- Display validation errors -->
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <!-- New Leave Information -->
@@ -29,7 +30,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    From: 
+                    From:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.MyLeaves.Leave_StartDate, new { htmlAttributes = new { @class = "form-control", type = "Date" } })
                         @Html.ValidationMessageFor(model => model.MyLeaves.Leave_StartDate, "", new { @class = "text-danger" })
@@ -37,7 +38,7 @@
                 </div>
 
                 <div class="form-group">
-                   End:
+                    End:
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.MyLeaves.Leave_EndDate, new { htmlAttributes = new { @class = "form-control", type = "Date" } })
                         @Html.ValidationMessageFor(model => model.MyLeaves.Leave_EndDate, "", new { @class = "text-danger" })
@@ -51,17 +52,15 @@
                         @Html.ValidationMessageFor(model => model.MyLeaves.Leave_Reason, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-actions no-color">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Create" class="btn btn-default" /> |
+                        @Html.ActionLink("Back", "Index")
                     </div>
                 </div>
 
             }
 
-            <div>
-                @Html.ActionLink("Back to List", "Index")
-            </div>
         </div>
     </div>
 
